add nute button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,8 +10,9 @@
 
     <div class="controller">
         {{!-- <button class="control-btn disable-btn" onclick="toggleMicrophone(this)">Open microphone</button> --}}
-        {{!-- <button class="control-btn disable-btn" onclick="toggleMute(this)">Mute</button> --}}
+        <button class="control-btn disable-btn" onclick="toggleMute(this)">Mute</button>
         <button class="control-btn disable-btn" onclick="toggleConnection(this)">Call</button>
+        
     </div>
 
 </header>
