--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,6 @@
         <div id="username-div">
             <input type="text" id="username">
             <button class="username-btn" onclick="changeUsername()">Change username</button>
-
         </div>
     </div>
 
@@ -12,15 +11,14 @@
         {{!-- <button class="control-btn disable-btn" onclick="toggleMicrophone(this)">Open microphone</button> --}}
         <button class="control-btn disable-btn" onclick="toggleMute(this)">Mute</button>
         <button class="control-btn disable-btn" onclick="toggleConnection(this)">Call</button>
-        
     </div>
 
 </header>
-<h2>users list</h2>
+{{!-- <h2>users list</h2>
 <ul class="users" id="users">
 
 
-</ul>
+</ul> --}}
 
 <script src="/files/js/index.js"></script>
 <link rel="stylesheet" href="/files/css/index.css">
